# precompile-utils

./: .gitignore  Cargo.toml  README.md
precompiles/utils/macro/src/precompile/: parse.rs
precompiles/utils/src/: lib.rs  precompile_set.rs
precompiles/utils/src/evm/: handle.rs
precompiles/utils/src/solidity/: modifier.rs
precompiles/utils/src/solidity/codec/: mod.rs  xcm.rs
precompiles/utils/src/testing/: execution.rs  handle.rs  solidity.rs
