[workspace]
resolver = "2"
members = [
    'precompiles/*',
    'precompiles/utils/macro',
]

[profile.release]
opt-level = 3
panic = "unwind"

[profile.dev]
# https://internals.rust-lang.org/t/help-test-faster-incremental-debug-macos-builds-on-nightly/14016
split-debuginfo = 'unpacked'

[profile.dev.package.backtrace]
inherits = "release"

[profile.production]
codegen-units = 1
inherits = "release"
lto = "thin"
strip = "symbols"
incremental = false

[workspace.dependencies]
assert_matches = { version = "1.3.0" }
clap = { version = "4.3", features = ["derive"] }
der = { version = "0.6.0", default-features = false }
derive_more = { version = "0.99" }
environmental = { version = "1.1.2", default-features = false }
evm = { version = "0.41.1", default-features = false }
impl-trait-for-tuples = { version = "0.2.2" }
log = { version = "0.4", default-features = false }
proc-macro2 = { version = "1" }
quote = { version = "1" }
syn = { version = "2" }
scale-info = { version = "2.11", default-features = false, features = ["derive"] }
parity-scale-codec = { version = "3.6", default-features = false, features = ["derive", "max-encoded-len"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
slices = { version = "0.2.0" }
hex = { version = "0.4", default-features = false }
hex-literal = { version = "0.4.1", default-features = false }
similar-asserts = { version = "1.5.0" }
num_enum = { version = "0.7.2", default-features = false }

# frontier
fp-evm = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.42", default-features = false }
pallet-evm = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.42", default-features = false, features = ["forbid-evm-reentrancy"] }

# wasm
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
sp-core-hashing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.42", default-features = false }

# local
precompile-utils = { path = "precompiles/utils", default-features = false }
